[package]
name = "scuffle-pprof"
version = "0.1.3"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-pprof"
license = "MIT OR Apache-2.0"
description = "Helper crate for adding pprof support to your application."
keywords = ["pprof", "cpu", "profiling", "flamegraphs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[[example]]
name = "scuffle-pprof-cpu"
path = "examples/cpu.rs"

[dependencies]
document-features = { optional = true, version = "0.2" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true

[target.'cfg(unix)'.dependencies]
pprof = { version = "0.14", features = ["prost-codec"] }
flate2 = "1.0"
thiserror = "2"

[dev-dependencies]
# For examples:
rand = "0.9"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
