[package]
name = "scuffle-rtmp"
version = "0.2.0"
edition = "2024"
description = "A pure Rust RTMP server"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-rtmp"
license = "MIT OR Apache-2.0"
keywords = ["rtmp", "server", "streaming"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(valgrind)'] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[[example]]
name = "scuffle-rtmp-basic"
path = "examples/basic.rs"

[dependencies]
tokio = { version = "1.36", features = ["io-util", "sync"] }
serde = "1"
serde_derive = "1"
byteorder = "1.5"
bytes = "1.5"
tracing = "0.1"
thiserror = "2.0"

rand = "0.9"
hmac = "0.12"
sha2 = "0.10"

num-traits = "0.2"
num-derive = "0.4"
bitmask-enum = "2.2.5"

nutype-enum = "0.1.2"
scuffle-amf0 = { version = "0.2.0", features = ["serde"] }
scuffle-bytes-util = "0.1.1"
scuffle-future-ext = "0.1.1"
scuffle-context = "0.1.1"
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0"

# For examples:
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
scuffle-flv = "0.2.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
