[package]
name = "scuffle-rtmp"
version = "0.2.1"
edition = "2024"
description = "A pure Rust RTMP server"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-rtmp"
license = "MIT OR Apache-2.0"
keywords = ["rtmp", "server", "streaming"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage_nightly)',
  'cfg(valgrind)',
] }

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[[example]]
name = "scuffle-rtmp-basic"
path = "examples/basic.rs"

[dependencies]
byteorder = "1.5"
bytes = "1.5"
serde = "1"
serde_derive = "1"
thiserror = "2.0"
tokio = { features = ["io-util", "sync"], version = "1.36" }
tracing = "0.1"

hmac = "0.12"
rand = "0.9"
sha2 = "0.10"

bitmask-enum = "2.2.5"
num-derive = "0.4"
num-traits = "0.2"

document-features = { optional = true, version = "0.2" }
nutype-enum = { path = "../nutype_enum", version = "0.1.4" }
scuffle-amf0 = { features = ["serde"], path = "../amf0", version = "0.2.1" }
scuffle-bytes-util = { features = [
  "serde",
], path = "../bytes-util", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1" }
scuffle-context = { path = "../context", version = "0.1.3" }
scuffle-future-ext = { path = "../future-ext", version = "0.1.3" }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde_json = "1.0"
tokio = { features = ["full"], version = "1.44.1" }

# For examples:
scuffle-flv = { path = "../flv", version = "0.2.1" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
