[package]
name = "scuffle-settings"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-settings"
license = "MIT OR Apache-2.0"
description = "Tools for managing configuration from environment variables or config files."
keywords = ["settings", "configuration", "environment", "config"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables cli parsing using clap
cli = ["clap"]
## Enables the ron format
ron = ["config/ron"]
## Enables the toml format
toml = ["config/toml"]
## Enables the yaml format
yaml = ["config/yaml"]
## Enables the json format
json = ["config/json"]
## Enables the json5 formast
json5 = ["config/json5"]
## Enables the ini format
ini = ["config/ini"]
## Enables all formats
all-formats = ["toml", "json", "yaml", "json5", "ini", "ron"]
## Enables templating support via jinja
templates = ["minijinja"]
## Enables scuffle-bootstrap support
bootstrap = ["scuffle-bootstrap", "anyhow", "cli"]
## Enables everything
full = ["all-formats", "templates", "cli", "bootstrap"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[[example]]
name = "scuffle-settings-cli"
path = "examples/cli.rs"
required-features = ["cli"]

[dependencies]
config = { version = "0.15", default-features = false }
clap = { version = "4", optional = true }
minijinja = { version = "2.5", optional = true, features = ["json", "custom_syntax", "urlencode"] }
serde = "1"
serde_derive = "1"
thiserror = "2"
anyhow = { version = "1.0", optional = true }
scuffle-bootstrap = { version = "0.1.1", optional = true }
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
# For examples:
smart-default = "0.7"
serde_derive = "1"

[package.metadata.xtask.powerset]
additive-features = [
    "cli",
    "ron",
    "toml",
    "yaml",
    "json",
    "json5",
    "ini",
    "templates",
    "all-formats",
    "full",
    "bootstrap",
    "docs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"
scuffle_bootstrap = "https://docs.rs/scuffle-bootstrap"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
