[package]
name = "scuffle-settings"
version = "0.1.4"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-settings"
license = "MIT OR Apache-2.0"
description = "Tools for managing configuration from environment variables or config files."
keywords = ["settings", "configuration", "environment", "config"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
## Enables cli parsing using clap
cli = ["clap"]
## Enables the ron format
ron = ["config/ron"]
## Enables the toml format
toml = ["config/toml"]
## Enables the yaml format
yaml = ["config/yaml"]
## Enables the json format
json = ["config/json"]
## Enables the json5 formast
json5 = ["config/json5"]
## Enables the ini format
ini = ["config/ini"]
## Enables all formats
all-formats = ["toml", "json", "yaml", "json5", "ini", "ron"]
## Enables templating support via jinja
templates = ["minijinja"]
## Enables scuffle-bootstrap support
bootstrap = ["scuffle-bootstrap", "anyhow", "cli"]
## Enables everything
full = ["all-formats", "templates", "cli", "bootstrap"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[[example]]
name = "scuffle-settings-cli"
path = "examples/cli.rs"
required-features = ["cli"]

[dependencies]
anyhow = { optional = true, version = "1.0" }
clap = { optional = true, version = "4" }
config = { default-features = false, version = "0.15" }
document-features = { optional = true, version = "0.2" }
minijinja = { features = ["custom_syntax", "json", "urlencode"], optional = true, version = "2.5" }
scuffle-bootstrap = { optional = true, path = "../bootstrap", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true
serde = "1"
serde_derive = "1"
thiserror = "2"

[dev-dependencies]
# For examples:
serde_derive = "1"
smart-default = "0.7"

[package.metadata.xtask.powerset]
additive-features = [
  "cli",
  "ron",
  "toml",
  "yaml",
  "json",
  "json5",
  "ini",
  "templates",
  "all-formats",
  "full",
  "bootstrap",
  "docs",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"
scuffle_bootstrap = "https://docs.rs/scuffle-bootstrap"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
