[package]
name = "scuffle-signal"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-signal"
license = "MIT OR Apache-2.0"
description = "Ergonomic async signal handling."
keywords = ["signal", "async"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(valgrind)'] }

[dependencies]
tokio = { version = "1", default-features = false, features = ["signal"] }
scuffle-bootstrap = { workspace = true, optional = true }
scuffle-context = { workspace = true, optional = true }
anyhow = { version = "1", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
scuffle-future-ext.workspace = true
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
tokio-stream = { version = "0.1", features = ["sync"] }

[features]
bootstrap = ["scuffle-bootstrap", "scuffle-context", "anyhow", "tokio/macros"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
  # major released
  "tokio::*",
  "anyhow::*",
  "futures::*",
  "libc::*",
  "tokio_stream::*",

  # workspace-specific (safe to expose within the same ecosystem)
  "scuffle_bootstrap::*",
  "scuffle_context::*",
  "scuffle_workspace_hack::*",
  "scuffle_future_ext::*",
]
