[package]
name = "scuffle-signal"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-signal"
license = "MIT OR Apache-2.0"
description = "Ergonomic async signal handling."
keywords = ["signal", "async"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(valgrind)'] }

[features]
## Enables scuffle-bootstrap support
bootstrap = ["scuffle-bootstrap", "scuffle-context", "anyhow", "tokio/macros"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["signal"] }
scuffle-bootstrap = { optional = true, version = "0.1.1" }
scuffle-context = { optional = true, version = "0.1.1" }
anyhow = { version = "1", optional = true }
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
scuffle-future-ext = "0.1.1"
libc = "0.2"

[target.'cfg(windows)'.dev-dependencies]
tokio-stream = { version = "0.1", features = ["sync"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.xtask.powerset]
additive-features = ["docs", "bootstrap"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
