[package]
name = "tinc"
version = "0.1.0"
edition = "2024"
description = "GRPc to REST transcoding library"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/tinc"
license = "MIT OR Apache-2.0"
keywords = ["grpc", "protobuf", "tonic", "rest"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
http = "1"
axum = "0.8"
http-body = "1"
http-body-util = "0.1.0"
bytes = "1.6.0"
base64 = "0.22"

tonic = { version = "0.13.0", optional = true }
prost = { version = "0.13.5", optional = true }
prost-types = { version = "0.13.5", optional = true }
tonic-types = { version = "0.13.0", optional = true }

serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"

chrono = { version = "0.4.36", features = ["serde"] }
thiserror = "2"
mediatype = "0.19.20"
serde_qs = "0.15.0"
linkme = "0.3"
num-traits = "0.2.19"
regex = "1"
linear-map = "1.2.0"

tinc-derive = "0.1.0"
openapiv3_1 = "0.1.0"
tinc-cel = { version = "0.0.1", features = ["runtime"] }

scuffle-workspace-hack.workspace = true

[features]
prost = ["dep:prost", "dep:prost-types"]
tonic = ["dep:tonic", "dep:tonic-types"]
default = ["prost", "tonic"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
