[package]
name = "tinc"
version = "0.1.0"
edition = "2024"
description = "GRPc to REST transcoding library"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/tinc"
license = "MIT OR Apache-2.0"
keywords = ["grpc", "protobuf", "tonic", "rest"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = ["prost", "tonic"]
## Enables prost support
prost = ["dep:prost", "dep:prost-types"]
## Enables tonic support
tonic = ["dep:tonic", "dep:tonic-types"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
http = "1"
axum = "0.8"
http-body = "1"
http-body-util = "0.1.0"
bytes = "1.6.0"
base64 = "0.22"

tonic = { version = "0.13.0", optional = true }
prost = { version = "0.13.5", optional = true }
prost-types = { version = "0.13.5", optional = true }
tonic-types = { version = "0.13.0", optional = true }

serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"

chrono = { version = "0.4.36", features = ["serde"] }
thiserror = "2"
mediatype = "0.19.20"
serde_qs = "0.15.0"
linkme = "0.3"
num-traits = "0.2.19"
regex = "1"
linear-map = "1.2.0"

tinc-derive = "0.1.0"
openapiv3_1 = "0.1.0"
tinc-cel = { version = "0.0.1", features = ["runtime"] }
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.xtask.powerset]
additive-features = ["docs", "prost", "tonic"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
