[package]
name = "tinc"
version = "0.1.2"
edition = "2024"
description = "GRPc to REST transcoding library"
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/tinc"
license = "MIT OR Apache-2.0"
keywords = ["grpc", "protobuf", "tonic", "rest"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[features]
default = ["prost", "tonic"]
## Enables prost support
prost = ["dep:prost", "dep:prost-types"]
## Enables tonic support
tonic = ["dep:tonic", "dep:tonic-types"]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1.6.0"
http = "1"
http-body = "1"
http-body-util = "0.1.0"

prost = { optional = true, version = "0.13.5" }
prost-types = { optional = true, version = "0.13.5" }
tonic = { optional = true, version = "0.13.0" }
tonic-types = { optional = true, version = "0.13.0" }

serde = "1"
serde_derive = "1"
serde_json = "1"
serde_repr = "0.1"

chrono = { features = ["serde"], version = "0.4.36" }
linear-map = "1.2.0"
linkme = "0.3"
mediatype = "0.19.20"
num-traits = "0.2.19"
regex = "1"
serde_qs = "0.15.0"
thiserror = "2"

document-features = { optional = true, version = "0.2" }
openapiv3_1 = { path = "../openapiv3_1", version = "0.1.1" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-workspace-hack.workspace = true
tinc-cel = { features = ["runtime"], path = "cel", version = "0.1.0" }
tinc-derive = { path = "derive", version = "0.1.1" }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.xtask.powerset]
additive-features = ["docs", "prost", "tonic"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"
Annotations = "./annotations.proto"

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
