[package]
name = "scuffle-transmuxer"
version = "0.2.0"
edition = "2024"
description = "A utility crate for transmuxing media streams."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-transmuxer"
license = "MIT OR Apache-2.0"
keywords = ["transmuxer", "media", "streaming"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
thiserror = "2.0.12"

scuffle-h264 = "0.2.0"
scuffle-h265 = "0.2.0"
scuffle-mp4 = "0.1.2"
scuffle-aac = "0.1.2"
scuffle-av1 = "0.1.2"
scuffle-flv = "0.2.0"
scuffle-bytes-util = "0.1.2"
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
