[package]
name = "scuffle-transmuxer"
version = "0.2.0"
edition = "2024"
description = "A utility crate for transmuxing media streams."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-transmuxer"
license = "MIT OR Apache-2.0"
keywords = ["transmuxer", "media", "streaming"]

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
thiserror = "2.0.12"

scuffle-h264 = "0.2.0"
scuffle-h265 = "0.2.0"
scuffle-mp4 = "0.1.2"
scuffle-aac = "0.1.2"
scuffle-av1 = "0.1.2"
scuffle-flv = "0.2.0"
scuffle-bytes-util = "0.1.2"
scuffle-changelog = { version = "0.1", optional = true }
document-features = { version = "0.2", optional = true }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--sort-modules-by-appearance", "--generate-link-to-definition"]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
