[package]
name = "scuffle-transmuxer"
version = "0.2.1"
edition = "2024"
description = "A utility crate for transmuxing media streams."
repository = "https://github.com/scufflecloud/scuffle"
authors = ["Scuffle <opensource@scuffle.cloud>"]
readme = "README.md"
documentation = "https://docs.rs/scuffle-transmuxer"
license = "MIT OR Apache-2.0"
keywords = ["transmuxer", "media", "streaming"]

[features]
## Enables changelog and documentation of feature flags
docs = ["dep:scuffle-changelog", "dep:document-features"]

[dependencies]
byteorder = "1.5"
bytes = "1.5"
thiserror = "2.0.12"

document-features = { optional = true, version = "0.2" }
scuffle-aac = { path = "../aac", version = "0.1.3" }
scuffle-av1 = { path = "../av1", version = "0.1.3" }
scuffle-bytes-util = { path = "../bytes-util", version = "0.1.3" }
scuffle-changelog = { optional = true, path = "../changelog", version = "0.1.0" }
scuffle-flv = { path = "../flv", version = "0.2.1" }
scuffle-h264 = { path = "../h264", version = "0.2.1" }
scuffle-h265 = { path = "../h265", version = "0.2.1" }
scuffle-mp4 = { path = "../mp4", version = "0.1.3" }
scuffle-workspace-hack.workspace = true

[dev-dependencies]
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
  "--cfg",
  "docsrs",
  "--sort-modules-by-appearance",
  "--generate-link-to-definition",
]

[package.metadata.cargo-sync-rdme.rustdoc.mappings]
changelog = "./CHANGELOG.md"

[package.metadata.xtask.powerset]
additive-features = ["docs"]

[package.metadata.cargo-sync-rdme.badge]
style = "flat-square"

[package.metadata.cargo-sync-rdme.badge.badges]
license = true
docs-rs = true
crates-io = true
github-actions = { workflows = "ci.yaml" }
codecov = true
