[package]
name = "xtask"
edition = "2024"
readme = "README.md"
publish = false
license = "MIT OR Apache-2.0"

# This package is a special package as its used by developers to run commands in the workspace.
# Therefore we should try to keep the dependencies to a minimum. If you need to add a command that is
# particularly heavy that includes a lot of dependencies consider adding it to a separate specialized
# package.

[dependencies]
anyhow = "1.0"
cargo-platform = "0.2"
cargo_metadata = "0.20"
chrono = "0.4"
clap = { features = ["derive", "env"], version = "4.5.23" }
fmtools = "0.1"
hex = "0.4"
home = "0.5"
indent_write = "2.2.0"
minijinja = "2"
num_cpus = "1"
serde = "1"
serde_derive = "1"
serde_json = "1.0"
sha2 = "0.10"
toml_edit = { features = ["serde"], version = "0.22" }
tracing = "0.1"
tracing-subscriber = { features = ["env-filter"], version = "0.3" }
